# mr-millionaire

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  setup.cfg
.github/: .CODEOWNERS
src/: config_handler.py  lib_constant.py  llm_handler.py  memory_handler.py  schema.py  utility.py
src/choices/: __init__.py  config_manager.py  game_runner.py  history_manager.py  mem_manager.py
src/mr_millionaire/: __init__.py
src/mr_millionaire/libs/choices/: history_manager.py
