[project]
name = "mr-millionaire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "db-sqlite3>=0.0.1",
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "litellm>=1.73.6",
    "numpy>=2.3.1",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
    "sentence-transformers>=5.0.0",
]

[tool.ruff]
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = ["T201", "D401", "D211", "D213", "RUF002", "FBT001", "FBT002"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
