[metadata]
name = mr-millionaire
version = 0.1.0
author = Mohamed Jubair
author_email = jakirjubair.555@gmail.com
description = A console-based 'Who Wants to Be a Millionaire?' style quiz game.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/Mr-Mechatronics/mr-millionaire
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Topic :: Games/Entertainment

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
include_package_data = True
install_requires =
    rich
    liteLLM
    chromadb

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mr-millionaire = mr_millionaire.main:start_game
